@@ -9,7 +9,7 @@ extra-y := head.o vmlinux.lds
 #	of_platform.o process.o prom.o prom_parse.o ptrace.o \
 #	setup.o signal.o sys_moxie.o timer.o traps.o
 
-obj-y += exceptions.o \
+obj-y += exception_handler.o exceptions.o \
 	init_task.o intc.o irq.o of_device.o \
 	of_platform.o process.o prom.o prom_parse.o ptrace.o \
 	setup.o signal.o sys_moxie.o timer.o traps.o
