@@ -1,4 +1,5 @@
 /*
+ * Copyright (C) 2009 Anthony Green <green@moxielogic.com>
  * Copyright (C) 2007-2009 Michal Simek <monstr@monstr.eu>
  * Copyright (C) 2007-2009 PetaLogix
  * Copyright (C) 2007 John Williams <john.williams@petalogix.com>
@@ -146,11 +147,12 @@ asmlinkage long moxie_clone(int flags, unsigned long stack, struct pt_regs *regs
 	return do_fork(flags, stack, regs, 0, NULL, NULL);
 }
 
-asmlinkage long moxie_execve(char __user *filenamei, char __user *__user *argv,
-			char __user *__user *envp, struct pt_regs *regs)
+asmlinkage long moxie_execve(char __user *filenamei, char __user *__user *argv)
 {
 	int error;
 	char *filename;
+        register char __user *__user *envp __asm__("$r2");
+        register struct pt_regs *regs __asm__("$r3");
 
 	filename = getname(filenamei);
 	error = PTR_ERR(filename);
@@ -210,6 +212,12 @@ out:
  */
 int kernel_execve(const char *filename, char *const argv[], char *const envp[])
 {
-  MOXIE_DIE;
-  return 1;
+  register const char *__a __asm__("$r0") = filename;
+  register const void *__b __asm__("$r1") = argv;
+  register const void *__c __asm__("$r2") = envp;
+  register const unsigned __syscall __asm__("$r5") = __NR_execve;
+  __asm__ __volatile__ ("swi 0xffffffff"
+			: "=r" (__a)
+			: "r" (__syscall), "r" (__a), "r" (__b), "r" (__c));
+  return __a;
 }
