@@ -15,7 +15,7 @@ ENTRY(sys_call_table)
 	.long sys_creat
 	.long sys_link
 	.long sys_unlink		/* 10 */
-	.long sys_execve
+	.long moxie_execve
 	.long sys_chdir
 	.long sys_time
 	.long sys_mknod
