@@ -45,7 +45,7 @@
 
 /****************************************************************************/
 
-#if 0
+#if 1
 #define DEBUG 1
 #endif
 
