@@ -1,0 +1,57 @@
+#!/bin/sh
+
+rm filemap.c.134r.expand; git rm  filemap.c.134r.expand
+rm filemap.c.135r.sibling; git rm  filemap.c.135r.sibling
+rm filemap.c.137r.initvals; git rm  filemap.c.137r.initvals
+rm filemap.c.138r.unshare; git rm  filemap.c.138r.unshare
+rm filemap.c.139r.vregs; git rm  filemap.c.139r.vregs
+rm filemap.c.140r.into_cfglayout; git rm  filemap.c.140r.into_cfglayout
+rm filemap.c.141r.jump; git rm  filemap.c.141r.jump
+rm filemap.c.142r.subreg1; git rm  filemap.c.142r.subreg1
+rm filemap.c.143r.dfinit; git rm  filemap.c.143r.dfinit
+rm filemap.c.144r.cse1; git rm  filemap.c.144r.cse1
+rm filemap.c.145r.fwprop1; git rm  filemap.c.145r.fwprop1
+rm filemap.c.146r.cprop1; git rm  filemap.c.146r.cprop1
+rm filemap.c.148r.hoist; git rm  filemap.c.148r.hoist
+rm filemap.c.149r.cprop2; git rm  filemap.c.149r.cprop2
+rm filemap.c.151r.cse_local; git rm  filemap.c.151r.cse_local
+rm filemap.c.152r.ce1; git rm  filemap.c.152r.ce1
+rm filemap.c.153r.loop2; git rm  filemap.c.153r.loop2
+rm filemap.c.154r.loop2_init; git rm  filemap.c.154r.loop2_init
+rm filemap.c.155r.loop2_invariant; git rm  filemap.c.155r.loop2_invariant
+rm filemap.c.159r.loop2_done; git rm  filemap.c.159r.loop2_done
+rm filemap.c.161r.cprop3; git rm  filemap.c.161r.cprop3
+rm filemap.c.162r.cse2; git rm  filemap.c.162r.cse2
+rm filemap.c.163r.dse1; git rm  filemap.c.163r.dse1
+rm filemap.c.164r.fwprop2; git rm  filemap.c.164r.fwprop2
+rm filemap.c.165r.reginfo; git rm  filemap.c.165r.reginfo
+rm filemap.c.167r.init-regs; git rm  filemap.c.167r.init-regs
+rm filemap.c.168r.dce; git rm  filemap.c.168r.dce
+rm filemap.c.169r.combine; git rm  filemap.c.169r.combine
+rm filemap.c.170r.ce2; git rm  filemap.c.170r.ce2
+rm filemap.c.172r.regmove; git rm  filemap.c.172r.regmove
+rm filemap.c.173r.outof_cfglayout; git rm  filemap.c.173r.outof_cfglayout
+rm filemap.c.174r.split1; git rm  filemap.c.174r.split1
+rm filemap.c.175r.subreg2; git rm  filemap.c.175r.subreg2
+rm filemap.c.178r.asmcons; git rm  filemap.c.178r.asmcons
+rm filemap.c.182r.ira; git rm  filemap.c.182r.ira
+rm filemap.c.184r.postreload; git rm  filemap.c.184r.postreload
+rm filemap.c.186r.split2; git rm  filemap.c.186r.split2
+rm filemap.c.188r.pro_and_epilogue; git rm  filemap.c.188r.pro_and_epilogue
+rm filemap.c.189r.dse2; git rm  filemap.c.189r.dse2
+rm filemap.c.190r.csa; git rm  filemap.c.190r.csa
+rm filemap.c.191r.peephole2; git rm  filemap.c.191r.peephole2
+rm filemap.c.192r.ce3; git rm  filemap.c.192r.ce3
+rm filemap.c.194r.cprop_hardreg; git rm  filemap.c.194r.cprop_hardreg
+rm filemap.c.195r.dce; git rm  filemap.c.195r.dce
+rm filemap.c.196r.bbro; git rm  filemap.c.196r.bbro
+rm filemap.c.202r.alignments; git rm  filemap.c.202r.alignments
+rm filemap.c.203r.compgotos; git rm  filemap.c.203r.compgotos
+rm filemap.c.204r.vartrack; git rm  filemap.c.204r.vartrack
+rm filemap.c.206r.barriers; git rm  filemap.c.206r.barriers
+rm filemap.c.208r.split5; git rm  filemap.c.208r.split5
+rm filemap.c.209r.eh_ranges; git rm  filemap.c.209r.eh_ranges
+rm filemap.c.210r.shorten; git rm  filemap.c.210r.shorten
+rm filemap.c.211r.nothrow; git rm  filemap.c.211r.nothrow
+rm filemap.c.212r.dfinish; git rm  filemap.c.212r.dfinish
+ 
