@@ -1,4 +1,8 @@
-2009-07-18  Anthony Green  <green@moxielogic.org>
+2009-07-31  Anthony Green  <green@moxielogic.com>
+
+	* moxie-tdep.c (moxie_analyze_prologue): Recognize new prologue sequences.
+
+2009-07-18  Anthony Green  <green@moxielogic.com>
 
 	* moxie-tdep.c (moxie_analyze_prologue): Take gdbarch as last
 	parameter instead of frame_info.
